# py-simons-voss

./: .gitignore  pyproject.toml
.github/actions/build-artifacts/: action.yml
.github/workflows/: pre-release.yml  release.yml
example/: example.py
src/py_simons_voss/: __init__.py  client.py  device.py  exceptions.py  gateway.py  helpers.py  lock.py  message.py
tests/: conftest.py  mock_message.py  test_gatewaynode.py  wait_for_card_event.py
