[project]
name = "py-simons-voss"
version = "0.1.0"
description = "Python library for SimonsVoss Gateway"
authors = [{ name = "Rami Mousleh", email = "engrbm87@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pycryptodome>=3.19.0"]

[tool.poetry]
packages = [{ include = "py_simons_voss", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "invalid-name",                  # N815
    "line-too-long",                 # E501, disabled globally
    "too-many-arguments",
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-positional-arguments",
    "too-many-branches",             # PLR0912
    "redefined-builtin",             # A001
    "protected-access",              # SLF001
]
