[project]
name = "py-simons-voss"
version = "0.1.0b0"
description = "Python library for SimonsVoss Gateway"
authors = [{ name = "Rami Mousleh", email = "engrbm87@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pycryptodome>=3.19.0"]


[build-system]
requires = ["uv-build>=0.8.13"]
build-backend = "uv_build"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "invalid-name",                  # N815
    "line-too-long",                 # E501, disabled globally
    "too-many-arguments",
    "too-many-lines",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-positional-arguments",
    "too-many-branches",             # PLR0912
    "redefined-builtin",             # A001
    "protected-access",              # SLF001
]

[tool.ruff]
required-version = ">=0.8.0"